# brainCell

./: CMakeLists.txt  main.cpp
Controller/: Controller.cpp  Controller.h
Model/: Model.cpp  Model.h
Model/World/: Cell.cpp  Cell.h  Food.cpp  Food.h  Utils.cpp  Utils.h  World.cpp  World.h
Model/World/Brain/: Connection.cpp  Connection.h  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  ReceptiveField.cpp  ReceptiveField.h
View/: SDL_Const.h  View.cpp  View.h
